# Flow

./: .gitignore  CHANGELOG.md  README.md  test_cycle.py  test_executor_fixes.py  test_mcp.py  test_mcp_full.py  test_plan_api.py  test_plan_output.py  test_vvm.py
.github/workflows/: test.yml
docs/: architecture.md  context-engine.md  mcp.md  plugin-system.md  runtime.md  sdk.md  timeline.md  vision.md
prototypes/: context_engine.py  context_engine_benchmark.py  context_engine_v2.py
python/: .gitignore  README.md  pyproject.toml  test_synthetic.py
python/flow_core/: __init__.py  __main__.py  _ffmpeg.py  context_engine.py  executor.py  mcp_server.py  planner.py  project_graph.py  verifier.py  video_parser.py
python/tests/: test_core.py
research/: comparison.md  ffmpeg.md  flow_architecture.md  mcut.md  mlt.md  moviepy.md  openreelio.md  otio.md  recommendations.md
rfcs/: 0001-runtime.md  0002-timeline.md  0003-plugin-system.md  0004-actions.md  0005-mcp.md
rfcs/core/: 0001-runtime.md  0002-execution.md  0003-actions.md  0004-timeline.md  0005-plugins.md  0006-mcp.md  0007-sdk.md  0008-context-engine.md
rfcs/extensions/: 0001-rendering.md  0002-asset-management.md  0003-project-format.md
specs/: README.md
specs/abi/: README.md  plugin-abi-bindings.rs  plugin-abi.h  plugin-abi.md
specs/actions/: README.md  envelope.json  export.json  trim.json
specs/contract-tests/: README.md
specs/errors/: README.md  error-codes.md  error-schema.json
specs/events/: README.md  event-codes.md  event-schema.json
specs/plugins/: README.md  manifest-schema.json
specs/project/: flow.json
specs/protocols/: README.md  mcp-surface.md
specs/timeline/: README.md  otio-extensions.md
specs/validation/: README.md
